
if ENABLE_C
# Header files that I wish to install in $(prefix)/include
include_HEADERS =				\
	../include/H5hut.h			\
	../include/H5.h				\
	../include/H5_attribs.h			\
	../include/H5_attachments.h		\
	../include/H5Part.h                     \
	../include/H5Block.h			\
	../include/H5Block_readwrite.h		\
	../include/H5Fed.h			\
	../include/H5Fed_adjacency.h		\
	../include/H5Fed_inquiry.h		\
	../include/H5Fed_retrieve.h		\
	../include/H5Fed_store.h		\
	../include/H5Fed_tags.h

# Listing of all possible headers that I may include
EXTRA_HEADERS =
endif

clean-local:
	$(RM) *~
