
if ENABLE_C
# Header files that I wish to install in $(prefix)/include
include_HEADERS =					\
	$(top_srcdir)/src/include/H5.h			\
	$(top_srcdir)/src/include/H5_attribs.h		\
	$(top_srcdir)/src/include/H5_model.h		\
	$(top_srcdir)/src/include/H5Part.h		\
	$(top_srcdir)/src/include/H5Part_io.h		\
	$(top_srcdir)/src/include/H5Part_model.h	\
	$(top_srcdir)/src/include/H5Block.h		\
	$(top_srcdir)/src/include/H5Block_attribs.h	\
	$(top_srcdir)/src/include/H5Block_io.h		\
	$(top_srcdir)/src/include/H5Block_model.h	\
	$(top_srcdir)/src/include/H5Fed.h		\
	$(top_srcdir)/src/include/H5Fed_adjacency.h	\
	$(top_srcdir)/src/include/H5Fed_model.h		\
	$(top_srcdir)/src/include/H5Fed_retrieve.h	\
	$(top_srcdir)/src/include/H5Fed_store.h		\
	$(top_srcdir)/src/include/H5Fed_tags.h		\
	$(top_srcdir)/src/include/H5hut.h

# Listing of all possible headers that I may include
EXTRA_HEADERS =
endif

clean-local:
	$(RM) *~
