# src/C level Makefile.am

# Header files that I wish to install in $(prefix)/include
include_HEADERS =				\
	../include/h5core/h5.h			\
	../include/h5core/h5_attribs.h		\
	../include/h5core/h5_debug.h		\
	../include/h5core/h5_errorhandling.h	\
	../include/h5core/h5_model.h		\
	../include/h5core/h5_syscall.h		\
	../include/h5core/h5_types.h		\
	../include/h5core/h5b_attribs.h		\
	../include/h5core/h5b_model.h		\
	../include/h5core/h5b_io.h	\
	../include/h5core/h5t_adjacencies.h	\
	../include/h5core/h5t_map.h		\
	../include/h5core/h5t_model.h		\
	../include/h5core/h5t_retrieve.h	\
	../include/h5core/h5t_store.h		\
	../include/h5core/h5t_tags.h		\
	../include/h5core/h5u_model.h		\
	../include/h5core/h5u_io.h

# Listing of all possible headers that I may include
EXTRA_HEADERS =

clean-local:
	$(RM) *~
	$(RM) h5core/*~
